# persist

./: .coveragerc  .flake8  .hgignore  .hgrc  .hgtags  .readthedocs.yaml  CHANGES  Makefile  README.md  meta.yaml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml  tests.yml
Docs/: README.ipynb  conf.py
Docs/api/: persist.rst
Docs/notebooks/: DataSet Format.ipynb
doc/: Makefile  README.ipynb  README.rst  conf.py  requirements.txt
doc/notebooks/: DataSet Demo.ipynb  DataSet Format.ipynb  Dev Notes.ipynb  Pickle.ipynb
persist/: __init__.py  archive.py  archive_.py  interfaces.py  objects.py
persist/_contrib/RADLogic/: rad_util.py  topsort.py
persist/tests/: conftest.py  test_archive.py  test_dataset.py  test_graph.py  test_objects.py
src/persist/: __init__.py  archive.py
src/persist/_contrib/RADLogic/: topsort.py
src/persist/tests/: test_archive.py  test_dataset.py
tests/: conftest.py  test_archive.py  test_dataset.py  test_graph.py
