[project]
name = 'persist'
authors = [
    {name = 'Michael McNeil Forbes', email = 'michael.forbes+python@gmail.com'},
]
requires-python = '>=3.6.2'
dependencies = [
    'zope-interface >= 5.4.0',
    'importlib-metadata >= 4.0.1; python_version < "3.8"',
    'six >= 1.15.0',
]
version = '3.2.dev0'
description = 'Persistent archival of python objects in an importable format.'
readme = 'README.md'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities'
]
license = {text = 'LGPL-2.1-or-later'}

[project.optional-dependencies]
test = [
    'pytest >= 6.2.4',
    'pytest-cov >= 2.11.1',
    'pytest-xdist',
    'persist[full]',
]
docs = [
    'Sphinx >= 3.5.4',
    'nbsphinx >= 0.8.4',
    'pycallgraph',
    'mmf-setup >=0.4.0',
    'sphinx-rtd-theme >= 0.5.2',
    'sphinxcontrib-zopeext >= 0.2.4',
    'ipython >= 7.23.1; python_version >= "3.7"',
]
full = [
    'scipy >= 1.5.4; python_version < "3.7"',
    'scipy >= 1.6.3; python_version < "3.10" and python_version >= "3.7"',
    'h5py; python_version < "3.7"',
    'h5py >= 3.2.1; python_version >= "3.7"',
]
all = [
    'persist[full,test,docs]',
]


[project.urls]
Issues = 'https://alum.mit.edu/www/mforbes/hg/forbes-group/persist/issues'
'Git Mirror' = 'https://github.com/forbes-group/persist'
repository = 'https://alum.mit.edu/www/mforbes/hg/forbes-group/persist'
documentation = 'http://persist.readthedocs.org'

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    'pip >= 21.1.0',
    'black >= 21.5b1',
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

######################################################################
# PyTest
[tool.pytest.ini_options]
testpaths = [ "tests", "src/persist" ]
markers = [
    # mark test as a benchmark.  (Might be slow, or platform dependent)
    "bench",
    # mark test as slow.
    "slow",
]
addopts = [
    "-m not bench",
    "--doctest-modules",
    "--cov",
    "--cov-report=html",
    "--cov-fail-under=96",
    "--no-cov-on-fail",
    #"-x",
    #"--pdb",
    #"--flake8",  # Disable until https://github.com/tholo/pytest-flake8/issues/8
]

doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]

######################################################################
# Black
[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.nox
      | \.venv
      | _build
      | build
      | dist
    )/
'''
